--- a/.gitbub/workflow/deploy.yml
+++ b/.gitbub/workflow/deploy.yml
@@ -43,7 +43,7 @@ jobs:
 
     - name: 'Install tfsec'
       run: |
-        curl -sLo tfsec https://github.com/aquasecurity/tfsec/releases/download/v${{ env.TFSEC_VERSION }}/tfsec-linux-amd64
+        curl -sLo   https://github.com/aquasecurity/tfsec/releases/download/v${{ env.TFSEC_VERSION }}/tfsec-linux-amd64
         chmod +x tfsec
         mv tfsec /usr/local/bin
         tfsec --version
