--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,6 @@ jobs:
     - name: 'Terraform Plan'
       run: terraform Plan
 
-    - name: 'Terrform Apply
-      if:github.ref == 'refs/heads/main'
+    - name: 'Terrform Apply'
+      if: github.ref == 'refs/heads/main'
       run: terraform apply -auto-approve tfplan
