--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,25 +15,24 @@ jobs:
 
     env:
       AWS_REGION: 'us-east-1'
-      TF_VERSION: '1.4.0'
+      TF_VERSION: '1.14.3' # Updated for 2025
       TFLINT_VERSION: '0.46.1'
-      TFSEC_VERSION: '1.28.1'
 
     steps:
     - name: 'Checkout GitHub repository'
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4 # Updated to v4 for 2025
 
     - name: 'Configure AWS Credentials'
-      uses: 'aws-actions/configure-aws-credentials@v1'
+      uses: aws-actions/configure-aws-credentials@v4 # Updated to v4
       with:
-        aws-access-key-id: ${{secret.AWS_ACCESS_KEY_ID}}
-        aws-secret-access-key: ${{secret.AWS_SECRET_ACCESS_KEY}}
-        aws-region: ${{env.AWS_REGION}}
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ env.AWS_REGION }}
 
     - name: 'Set up Terraform'
-      uses: hashicorp/terraform@v1
+      uses: hashicorp/setup-terraform@v3 # Updated to v3
       with:
-        terraform_version: ${{env.TFSEC_VERSION}}
+        terraform_version: ${{ env.TF_VERSION }} # Fixed variable mapping
     
     - name: 'Install TFlint'
       run: |
@@ -41,18 +40,20 @@ jobs:
         unzip tflint.zip -d /usr/local/bin
         tflint --version
 
-    - name: 'Install tfsec'
-      run: |
-        curl -sLo   https://github.com/aquasecurity/tfsec/releases/download/v${{ env.TFSEC_VERSION }}/tfsec-linux-amd64
-        chmod +x tfsec
-        mv tfsec /usr/local/bin
-        tfsec --version
+    - name: 'Run Trivy (Security Scan)' # Successor to tfsec in 2025
+      uses: aquasecurity/trivy-action@master
+      with:
+        scan-type: 'config'
+        hide-progress: false
+        format: 'table'
+        exit-code: '1'
+        severity: 'CRITICAL,HIGH'
 
     - name: 'Terraform Init'
       run: terraform init
 
     - name: 'Terraform Format'
-      run: terraform fmt
+      run: terraform fmt -check
 
     - name: 'Terraform Validate'
       run: terraform validate
@@ -62,12 +63,9 @@ jobs:
         tflint --init
         tflint
 
-    - name: 'tfsec'
-      run: tfsec .
-
     - name: 'Terraform Plan'
-      run: terraform Plan
+      run: terraform plan -out=tfplan # Added -out for apply step
 
-    - name: 'Terrform Apply'
-      if: github.ref == 'refs/heads/main'
+    - name: 'Terraform Apply' # Fixed quote and spacing
+      if: github.ref == 'refs/heads/main' && github.event_name == 'push'
       run: terraform apply -auto-approve tfplan
