--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,24 +15,25 @@ jobs:
 
     env:
       AWS_REGION: 'us-east-1'
-      TF_VERSION: '1.14.3' # Updated for 2025
-      TFLINT_VERSION: '0.46.1'
+      TF_VERSION: '1.11.0'        # Updated to stable 2025 version
+      TFLINT_VERSION: '0.55.0'    # Updated for 2025
+      TFSEC_VERSION: '1.28.13'    # Note: tfsec is now part of Trivy
 
     steps:
     - name: 'Checkout GitHub repository'
-      uses: actions/checkout@v4 # Updated to v4 for 2025
+      uses: actions/checkout@v4 # Updated for 2025
 
     - name: 'Configure AWS Credentials'
-      uses: aws-actions/configure-aws-credentials@v4 # Updated to v4
+      uses: aws-actions/configure-aws-credentials@v4 # Updated for 2025
       with:
         aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
         aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         aws-region: ${{ env.AWS_REGION }}
 
     - name: 'Set up Terraform'
-      uses: hashicorp/setup-terraform@v3 # Updated to v3
+      uses: hashicorp/setup-terraform@v3 # Corrected action name/version
       with:
-        terraform_version: ${{ env.TF_VERSION }} # Fixed variable mapping
+        terraform_version: ${{ env.TF_VERSION }} # Fixed mapping from TFSEC_VERSION to TF_VERSION
     
     - name: 'Install TFlint'
       run: |
@@ -40,14 +41,12 @@ jobs:
         unzip tflint.zip -d /usr/local/bin
         tflint --version
 
-    - name: 'Run Trivy (Security Scan)' # Successor to tfsec in 2025
-      uses: aquasecurity/trivy-action@master
-      with:
-        scan-type: 'config'
-        hide-progress: false
-        format: 'table'
-        exit-code: '1'
-        severity: 'CRITICAL,HIGH'
+    - name: 'Install tfsec'
+      run: |
+        curl -sLo tfsec https://github.com/aquasecurity/tfsec/releases/download/v${{ env.TFSEC_VERSION }}/tfsec-linux-amd64
+        chmod +x tfsec
+        mv tfsec /usr/local/bin
+        tfsec --version
 
     - name: 'Terraform Init'
       run: terraform init
@@ -63,9 +62,12 @@ jobs:
         tflint --init
         tflint
 
-    - name: 'Terraform Plan'
-      run: terraform plan -out=tfplan # Added -out for apply step
+    - name: 'tfsec'
+      run: tfsec .
 
-    - name: 'Terraform Apply' # Fixed quote and spacing
+    - name: 'Terraform Plan'
+      run: terraform plan -out=tfplan # Fixed 'Plan' casing and added -out flag
+
+    - name: 'Terraform Apply' # Fixed missing closing quote
       if: github.ref == 'refs/heads/main' && github.event_name == 'push'
-      run: terraform apply -auto-approve tfplan
+      run: terraform apply -auto-approve tfplan # Apply uses the plan file created above
