--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: 'ap-south-1'
       TF_VERSION: '1.11.0'        # Updated to stable 2025 version
       TFLINT_VERSION: '0.55.0'    # Updated for 2025
       TFSEC_VERSION: '1.28.13'    # Note: tfsec is now part of Trivy
