--- a/.github/workflows/terraform-workflow.yml
+++ b/.github/workflows/terraform-workflow.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-  pull_requests:
+  pull_request:
     branches:
       - main
 
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: 'ap-south-1'
       TF_VERSION: '1.4.0'
       TFLINT_VERSION: '0.46.1'
       TFSEC_VERSION: '1.28.1'
@@ -68,6 +68,6 @@ jobs:
     - name: 'Terraform Plan'
       run: terraform Plan
 
-    - name: 'Terrform Apply
-      if:github.ref == 'refs/heads/main'
+    - name: 'Terrform Apply'
+      if : github.ref == 'refs/heads/main'
       run: terraform apply -auto-approve tfplan
