--- a/.github/workflows/clean-up.yml
+++ b/.github/workflows/clean-up.yml
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      AWS_REGION: 'us-east-1'
+      AWS_REGION: 'ap-south-1'
       TF_VERSION: '1.14.3' # Updated to stable 2025 version
 
     steps:
